recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:7: error: missing arguments for method min in class Min;
follow this method with `_' if you want to treat it as a partially applied function
    return uneFonction(l.tail, min);
                               ^