recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  def uneFonction(l:List[Int], tmin:Int): Int = {
    if(l.head < tmin){
      return uneFonction(l.tail, l.head);
    }
    return uneFonction(l.tail, min);
  } 
  return uneFonction(l.tail,l.head);
}